New test for rankingLeague and change its private to default